==> zwxdlut/arm_device_bsp/lib/uart/uart_stm32fxxx_hal.c <==
/*
 * uart_stm32fxxx_hal.c
 *
 *  Created on: 2018��10��16��
 *      Author: Administrator
 */

#include "uart.h"

/*******************************************************************************
 * Definitions
 ******************************************************************************/
 #if defined USING_OS_FREERTOS
extern SemaphoreHandle_t g_uart_tx_mutex[UART1_INDEX + 1];
#endif

extern uint8_t  g_uart_rx_queue[UART1_INDEX + 1][UART_BUFFER_SIZE];
extern uint16_t g_uart_rx_queue_head[UART1_INDEX + 1];
extern uint16_t g_uart_rx_queue_tail[UART1_INDEX + 1];

typedef struct
{
	GPIO_TypeDef *gpio_;
	uint16_t     rx_pin_;
	uint16_t     tx_pin_;
	uint8_t      gpio_af_;
	IRQn_Type    irqs_[1];
}comm_config_t;

static comm_config_t g_comm_config[UART1_INDEX + 1] =
{
	{
		.gpio_    = UART0_GPIO,
		.rx_pin_  = UART0_RX_PIN,
		.tx_pin_  = UART0_TX_PIN,
		.gpio_af_ = UART0_GPIO_AF,
		.irqs_    = {UART0_IRQ}
	},
	{
		.gpio_    = UART1_GPIO,
		.rx_pin_  = UART1_RX_PIN,
		.tx_pin_  = UART1_TX_PIN,
		.gpio_af_ = UART1_GPIO_AF,
		.irqs_    = {UART1_IRQ}
	}
};

static UART_HandleTypeDef g_handle[UART1_INDEX + 1] = 
{
	{
		.Instance          = UART0_INST,
		.Init.BaudRate     = 115200,
		.Init.WordLength   = UART_WORDLENGTH_8B,
		.Init.StopBits     = UART_STOPBITS_1,
		.Init.Parity       = UART_PARITY_NONE,
		.Init.HwFlowCtl    = UART_HWCONTROL_NONE,
		.Init.Mode         = UART_MODE_TX_RX,
		.Init.OverSampling = UART_OVERSAMPLING_16
	},
	{
		.Instance          = UART1_INST,
		.Init.BaudRate     = 115200,
		.Init.WordLength   = UART_WORDLENGTH_8B,
		.Init.StopBits     = UART_STOPBITS_1,
		.Init.Parity       = UART_PARITY_NONE,
		.Init.HwFlowCtl    = UART_HWCONTROL_NONE,
		.Init.Mode         = UART_MODE_TX_RX,
		.Init.OverSampling = UART_OVERSAMPLING_16
	}
};

/*******************************************************************************
 * Local Function prototypes
 ******************************************************************************/
/*******************************************************************************
 * Functions
 ******************************************************************************/
int32_t uart_init(const uint8_t _index, const uint32_t _baudrate)
{
	assert(UART1_INDEX >= _index);
	
	GPIO_InitTypeDef  GPIO_InitStructure;

	/* Rx ring queue initialization */
	g_uart_rx_queue_head[_index] = 0;
	g_uart_rx_queue_tail[_index] = 0;
#if defined USING_OS_FREERTOS
	g_uart_tx_mutex[_index] = xSemaphoreCreateRecursiveMutex();
#endif
	/* GPIO initialization */
	UART_GPIO_CLK_ENABLE(_index);
	GPIO_InitStructure.Pin       = g_comm_config[_index].rx_pin_;
	GPIO_InitStructure.Mode      = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Pull      = GPIO_PULLUP;
	GPIO_InitStructure.Speed     = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStructure.Alternate = g_comm_config[_index].gpio_af_;
	HAL_GPIO_Init(g_comm_config[_index].gpio_, &GPIO_InitStructure);
	GPIO_InitStructure.Pin       = g_comm_config[_index].tx_pin_;
	GPIO_InitStructure.Pull      = GPIO_NOPULL;
	HAL_GPIO_Init(g_comm_config[_index].gpio_, &GPIO_InitStructure);
	
	/* UART initialization */
	UART_CLK_ENABLE(_index);
	g_handle[_index].Init.BaudRate = _baudrate;
	HAL_UART_Init(&g_handle[_index]);
	LL_USART_EnableIT_RXNE(g_handle[_index].Instance);
	LL_USART_EnableIT_ERROR(g_handle[_index].Instance);
	
	/* NVIC initialization */
	for(uint8_t i = 0; i < sizeof(g_comm_config[_index].irqs_); i++)
	{
		HAL_NVIC_SetPriority(g_comm_config[_index].irqs_[i], 0, 0);
		HAL_NVIC_EnableIRQ(g_comm_config[_index].irqs_[i]);
	}

	return 0;
}

int32_t uart_deinit(const uint8_t _index)
{
	assert(UART1_INDEX >= _index);

	for(uint8_t i = 0; i < sizeof(g_comm_config[_index].irqs_); i++)
		HAL_NVIC_DisableIRQ(g_comm_config[_index].irqs_[i]);
	LL_USART_ClearFlag_RXNE(g_handle[_index].Instance);
	LL_USART_DisableIT_RXNE(g_handle[_index].Instance);
	LL_USART_DisableIT_ERROR(g_handle[_index].Instance);
	HAL_UART_DeInit(&g_handle[_index]);
	UART_CLK_DISABLE(_index);
	UART_FORCE_RESET(_index);
	UART_RELEASE_RESET(_index);
	HAL_GPIO_DeInit(g_comm_config[_index].gpio_, g_comm_config[_index].rx_pin_);
	HAL_GPIO_DeInit(g_comm_config[_index].gpio_, g_comm_config[_index].tx_pin_);
#if defined USING_OS_FREERTOS
	vSemaphoreDelete(g_uart_tx_mutex[_index]);
#endif

	return 0;
}

uint16_t uart_transmit(const uint8_t _index, const uint8_t *const _buf, const uint16_t _size)
{
	assert(UART1_INDEX >= _index && NULL != _buf);

	uint16_t size = 0;
	
#if defined USING_OS_FREERTOS
	xSemaphoreTakeRecursive( g_uart_tx_mutex[_index], portMAX_DELAY);
#endif
	if(HAL_OK == HAL_UART_Transmit(&g_handle[_index], (uint8_t*)_buf, _size, 1000))
		size = _size;
#if defined USING_OS_FREERTOS
	xSemaphoreGiveRecursive( g_uart_tx_mutex[_index] );
#endif

	return size;
}

/**
 * @brief UART IRQ handler.
 *
 * @param [in] _index UART index.
 */
void uart_irq_handler(const uint8_t _index)
{
	/* RXNE */
	if(0 != LL_USART_IsActiveFlag_RXNE(g_handle[_index].Instance) && 0 != LL_USART_IsEnabledIT_RXNE(g_handle[_index].Instance))
	{
		LL_USART_ClearFlag_RXNE(g_handle[_index].Instance);
		/* Rx queue is not full */
		if(g_uart_rx_queue_head[_index] != (g_uart_rx_queue_tail[_index] + 1) % UART_BUFFER_SIZE)
		{
			/* Push rx queue */
			g_uart_rx_queue[_index][g_uart_rx_queue_tail[_index]] = LL_USART_ReceiveData8(g_handle[_index].Instance);
			g_uart_rx_queue_tail[_index] = (g_uart_rx_queue_tail[_index] + 1) % UART_BUFFER_SIZE;
		}		
    }
}

/*******************************************************************************
 * Local Functions
 ******************************************************************************/
